replacing css with scss

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Complete resposible website Design</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./scss/styles.css">
 </head>
 <body>
     <div class="banner">
@@ -118,7 +119,7 @@
                 </div>
             </div>
         </div>
-        <div class="imgBx2"></div>
+          <div class="imgBx2"></div>
     </section>
     <section>
         <section class="footer">
